added jquery node fixed rendererjs

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/wsiewert/Capstone#readme",
   "dependencies": {
     "electron": "^1.7.5",
-    "electron-oauth2": "^3.0.0"
+    "electron-oauth2": "^3.0.0",
+    "jquery": "^3.2.1"
   }
 }
