--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "electron": "^1.7.5",
     "electron-oauth2": "^3.0.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "electron-store": "^1.2.0"
   }
 }
