--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "electron-store": "^1.2.0",
     "google-auth-library": "^0.11.0",
     "googleapis": "^21.3.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "js-base64": "^2.3.2",
+    "mailgun-js": "^0.13.1"
   }
 }
